admission/ValidatingAdmissionPolicy/policies/capabilities-add-netbindservice/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: capabilities-add-netbindservice-ephemeralcontainers
  annotations:
    kubeapt.io/uuid: "d8cfe5f0-c5f9-4bb8-87e0-327213d313ec"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test capabilities-add-netbindservice-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/capabilities-add-netbindservice/ephemeralcontainers/deny-kubectl-debug-custom.yaml
